introducing me, i guess

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Brayden Yip</title>
   </head>
   <body>
     <h1>Test</h1>
-    <p>Test paragraph</p>
+    <p>Hi! My name is Brayden Yip, and I'm an aspiring software engineer! This website will show off some of the things that I have been working on!</p>
   </body>
 </html>
