removed newline added unique style for the about-me section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Test</h1>
-    <p>Hi! My name is Brayden Yip, and I'm an aspiring software engineer!\n This website will show off some of the things that I have been working on!</p>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer. This website will show off some of the things that I have been working on!</p>
   </body>
 </html>
