reordered css and added fonts hopefully

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Test</h1>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer. This website will show off some of the things that I have been working on!</p>
+    <h1>Brayden Yip</h1>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada. This website will show off some of the things that I have been working on!</p>
   </body>
 </html>
