--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Brayden Yip</h1>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada. This website will show off some of the things that I have been working on!</p>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
   </body>
 </html>
