--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Brayden Yip</h1>
+    <h1 id="self-title">Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
   </body>
 </html>
