Added a link to a project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <h1 id="self-title">Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
+    <div class = "project-link">
+      <a href="/blackjack-web/">"Blackjack Game"</a>
+    </div>
   </body>
 </html>
