--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1 id="self-title">Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
-    <div class="project-link" onclick="location.href='/blackjack-web';">Blackjack Game</div>
+    <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
   </body>
 </html>
