Back to p + changed hover colour

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="self-title">Brayden Yip</h1>
-    <div id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</div>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
     <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
   </body>
 </html>
