Fiddled around with the top some more

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1 id="self-title">Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
     <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
+    <div class="project-desc">A web-based blackjack game (no real money involved)</div>
   </body>
 </html>
