--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 id="self-title">Brayden Yip</h1>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an aspiring software engineer from Canada.<br> This website is a showcase of my projects!</p>
+    <h1 id="self-title"> > Brayden Yip</h1>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a skilled intern this summer, please <a href ="/contact">get in touch!</a></p>
     <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
     <div class="project-desc">A web-based blackjack game (no real money involved)</div>
   </body>
