Added contact info on the bottom of page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Brayden Yip</title>
+    <title> Brayden Yip </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1 id="self-title"> > Brayden Yip</h1>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a skilled intern this summer, please <a href ="/contact">get in touch!</a></p>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software development intern this summer, please get in touch!</p>
     <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
     <div class="project-desc">A web-based blackjack game (no real money involved)</div>
+    <h2 id="contact">Contact me</h2>
+    <div class="contact-label">LinkedIn: brayden-yip</div>
+    <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic: yipb@uoguelph.ca </div>
+    <div class="contact-label">Github profile: <a href="https://github.com/braydenyip">Click here!</a>
   </body>
 </html>
