Changed some CSS and edited contact info

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="project-desc">A web-based blackjack game (no real money involved)</div>
     <h2 id="contact">Contact me</h2>
     <div class="contact-label">LinkedIn: brayden-yip</div>
-    <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic: yipb@uoguelph.ca </div>
+    <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic inquiries: yipb@uoguelph.ca </div>
     <div class="contact-label">Github profile: <a href="https://github.com/braydenyip">Click here!</a>
   </body>
 </html>
