--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <h1 id="self-title"> > Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software development intern this summer, please get in touch!</p>
     <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
-    <div class="project-desc">A web-based blackjack game (no real money involved)</div>
+    <div class="project-desc">A web-based blackjack game (no real money involved) (UNDER CONSTRUCTION)</div>
+
+    <button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'">Github link</button>
+    <div class="project-desc">Takes you to my github page.</div>
+
     <h2 id="contact">Contact me</h2>
     <div class="contact-label">LinkedIn: brayden-yip</div>
     <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic inquiries: yipb@uoguelph.ca </div>
