--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'">Github link</button>
     <div class="project-desc">Takes you to my github page.</div>
 
-    <h2 id="contact">Contact me</h2>
+    <h2 id="contact">Contact me!</h2>
     <div class="contact-label">LinkedIn: brayden-yip</div>
     <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic inquiries: yipb@uoguelph.ca </div>
-    <div class="contact-label">Github profile: <a href="https://github.com/braydenyip">Click here!</a>
   </body>
 </html>
