--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <body>
     <h1 id="self-title"> > Brayden Yip</h1>
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software development intern this summer, please get in touch!</p>
-    <button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
-    <div class="project-desc"> web-based blackjack clone (UNDER CONSTRUCTION)</div>
-
-    <button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'">Github link</button>
-    <div class="project-desc">Takes you to my github page.</div>
+    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
+    <div class="project-desc"> web-based blackjack clone (UNDER CONSTRUCTION)</div></div>
+    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'">Github link</button>
+    <div class="project-desc">Takes you to my github page.</div></div>
 
     <h2 id="contact">Contact me!</h2>
     <div class="contact-label">LinkedIn: brayden-yip</div>
