--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software development intern this summer, please get in touch!</p>
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
     <div class="project-desc"> web-based blackjack clone (UNDER CONSTRUCTION)</div></div>
-    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'">Github link</button>
+    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
     <div class="project-desc">Takes you to my github page.</div></div>
 
     <h2 id="contact">Contact me!</h2>
