--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="project-desc">Takes you to my github page.</div></div>
 
     <h2 id="contact">Contact me!</h2>
-    <div class="contact-label">LinkedIn: brayden-yip</div>
-    <div class="contact-label">Email: For personal inquiries: braydenjyip@gmail.com <br> For co-op or academic inquiries: yipb@uoguelph.ca </div>
+    <div class="contact-label">LinkedIn: brayden-yip<br>Email: For personal inquiries: braydenjyip@gmail.com<br>For co-op or academic inquiries: yipb@uoguelph.ca </div>
   </body>
 </html>
