--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div class="project-desc">Takes you to my github page.</div></div>
 
     <h2 id="contact">Contact me!</h2>
-    <div class="contact-label">LinkedIn: brayden-yip<br>Email: For personal inquiries: braydenjyip@gmail.com<br>For co-op or academic inquiries: yipb@uoguelph.ca </div>
+    <div class="contact-label">LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
   </body>
 </html>
