Added to the github link description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
     <div class="project-desc"> web-based blackjack clone (UNDER CONSTRUCTION)</div></div>
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
-    <div class="project-desc">Takes you to my github page.</div></div>
+    <div class="project-desc">Takes you to my github page, featuring my projects and legacy code from select courses.</div></div>
 
     <h2 id="contact">Contact me!</h2>
     <div class="contact-label">LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
