--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Brayden Yip </title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <title>Brayden Yip</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1 id="self-title"> > Brayden Yip</h1>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software development intern this summer, please get in touch!</p>
-    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='/blackjack-web';">Blackjack Game</button>
-    <div class="project-desc"> web-based blackjack clone (UNDER CONSTRUCTION)</div></div>
+    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software engineering intern this summer or fall, please get in touch!</p>
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
-    <div class="project-desc">Takes you to my github page, featuring my projects and legacy code from select courses.</div></div>
-
-    <h2 id="contact">Contact me!</h2>
-    <div class="contact-label">LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
+    <div class="project-desc">Takes you to my github page, featuring my projects and some code from select courses.</div></div>
+    <h2 id="contact">Contact me!</h2> 
+    <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
   </body>
 </html>
