--- a/about.html
+++ b/about.html
@@ -16,10 +16,11 @@
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
       </ul>
     </div>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software engineering intern this summer or fall, please get in touch!</p>
-    <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
-    <div class="project-desc">Takes you to my github page, featuring my projects and some code from select courses.</div></div>
-    <h2 id="contact">Contact me!</h2> 
+    <p id="about-me">
+        Hi! My name is Brayden Yip. I'm a fourth year Engineering Systems and Computing student at the University of Guelph in Guelph, Ontario, Canada.
+        <br> 
+        I'm passionate about building things with computers. I've been learning programming for the last 5 years, with a number of projects, courses, and tools under my belt
+    </p>
     <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
   </body>
 </html>
