add resume, update about

--- a/about.html
+++ b/about.html
@@ -14,12 +14,18 @@
       <ul class="navbar"> 
         <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip </a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
+        <li class="navbar-item"> <a class="navbar-link" href="./resume.html"> Resume </a></li>
       </ul>
     </div>
     <p id="about-me">
-        Hi! My name is Brayden Yip. I'm a fourth year Engineering Systems and Computing student at the University of Guelph in Guelph, Ontario, Canada.
-        <br> 
-        I'm passionate about building things with computers. I've been learning programming for the last 5 years, with a number of projects, courses, and tools under my belt
+        i come from the tech hub of kitchener, ontario, canada. i grew up on the internet and alongside computers and electronics, so it was natural for me to want to learn to code and do cool things with computers and electronics.
+        i'm currently studying a program called "engineering systems and computing" at the University of Guelph, which lets me dabble in all those things and more.
+        my co-op terms have focused primarily on software development. currently, my co-op at Clear Software is a full-stack developer role working on an application in made with React, Typescript, GraphQL, and MariaDB. 
+        in the fall, i'm heading back to my hometown to work for <a href="https://www.d2l.com/"></a>, who make the course management tool for hundreds of universities and colleges (including my own!)
+        <br>
+        in my spare time, i'm probably whipping up a personal project, playing around with mechanical keyboards, gaming, heading to a local concert, exploring nature, or making my own music. 
+        <br>
+        wanna get in touch? my socials are below:
     </p>
     <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
   </body>
