--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
       <ul class="navbar"> 
         <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip </a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
+        <li class="navbar-item"> <a class="navbar-link" href="./resume.html"> Resume </a></li>
       </ul>
     </div>
-    <p id="about-me">Hi! My name is Brayden Yip, and I'm an engineering student and programming enthusiast! <br> If you are an organization in need of a software engineering intern this summer or fall, please get in touch!</p>
+    <p id="about-me">
+      i'm an engineering systems and computing student at the University of Guelph, currently working as a full-stack software engineer on my co-op with <a href="https://www.clearsoftware.ca/">Clear Software.</a>
+      right now, i've got some cool plans for the fall, but i'm open to opportunities in software engineering, embedded systems, and machine learning in the summer of 2024.
+      <br> 
+
+    </p>
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
     <div class="project-desc">Takes you to my github page, featuring my projects and some code from select courses.</div></div>
     <h2 id="contact">Contact me!</h2> 
