--- a/about.html
+++ b/about.html
@@ -12,21 +12,27 @@
   <body>
     <div>
       <ul class="navbar"> 
-        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip </a> </li>
+        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip 👨🏻‍💻 </a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./resume.html"> Resume </a></li>
       </ul>
     </div>
     <p id="about-me">
-        i come from the tech hub of kitchener, ontario, canada. i grew up on the internet and alongside computers and electronics, so it was natural for me to want to learn to code and do cool things with computers and electronics.
-        i'm currently studying a program called "engineering systems and computing" at the University of Guelph, which lets me dabble in all those things and more.
-        my co-op terms have focused primarily on software development. currently, my co-op at Clear Software is a full-stack developer role working on an application in made with React, Typescript, GraphQL, and MariaDB. 
-        in the fall, i'm heading back to my hometown to work for <a href="https://www.d2l.com/"></a>, who make the course management tool for hundreds of universities and colleges (including my own!)
+        👨🏻‍💻⚙   I come from the tech hub of Kitchener, Ontario, Canada. I grew up on the internet and alongside computers and electronics, so it was natural for me to want to learn to code and do cool things with computers and electronics.
+        Over the last few years, as I've worked through my co-ops and degree program, I've realized that I have a passion for tackling interesting projects, learning new technologies, and bringing a creative design approach to engineering tasks.
+        I've worked with a variety of employers of different shapes and sizes, from Fortune 500-listed companies to small local development shops, working across the tech stack.
         <br>
-        in my spare time, i'm probably whipping up a personal project, playing around with mechanical keyboards, gaming, heading to a local concert, exploring nature, or making my own music. 
+        <br>
+        🚀✈   One of my biggest passions is the field of aerospace . I'm currently a member of the Gryphon Aerospace Club at the University of Guelph, where I work on the controls and software guiding our unmanned aerial vehicle program. In May 2024, we competed in Alma, Quebec, in our debut at the AEAC UAS National Student Competition.
+        Despite setbacks and our limited budget and experience, we were able to fly successfully and won an award for our perseverance and dedication along the way. We're hoping to be back even stronger next year, with all our new found knowledge and experience.
+        <br>
+        <br>
+        🎧🧗‍♂️   In my spare time, i'm probably whipping up a personal project, playing with mechanical keyboards, gaming, making music, volunteering with campus radio, or bouldering at the local climbing gym!
+        <br>
         <br>
         wanna get in touch? my socials are below:
     </p>
-    <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
+    <hr style="margin-left: 10%; margin-right: 10%; margin-top: 2.5%; margin-bottom: 2.5%;">
+    <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal or employment inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For academic inquiries: <a href="mailto:yipb@uoguelph.ca"> yipb@uoguelph.ca</a> </div>
   </body>
 </html>
