--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
   <body>
     <div>
       <ul class="navbar"> 
-        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip </a> </li>
+        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip 👨🏻‍💻</a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./resume.html"> Resume </a></li>
       </ul>
     </div>
     <p id="about-me">
-      i'm an engineering systems and computing student at the University of Guelph, currently working as a full-stack software engineer on my co-op with <a href="https://www.clearsoftware.ca/">Clear Software.</a>
-      right now, i've got some cool plans for the fall, but i'm open to opportunities in software engineering, embedded systems, and machine learning in the summer of 2024.
-      <br> 
-
+      Hello! 👋 My name is Brayden Yip, and I love tinkering, learning, and building with software and electronics. I'm heading into my last semester of the Engineering Systems and Computing program at the University of Guelph,
+      where I've spent the last few years honing my skills across a wide variety of engineering topics, in and out of the classroom.
+      <br>
+      <br>
+      My fields of interest include software engineering, embedded systems engineering, machine learning algorithms, and graph theory. I have substantial experience in various roles as a co-op student, from
+      machine learning research and data engineering to cloud engineering and front-end development.
+      <br>
+      <br>
+      Click the buttons above to learn more about me and my experience, or check out the GitHub link below to see some of my projects and work.
     </p>
+    <hr style="margin-left: 10%; margin-right: 10%; margin-top: 2.5%; margin-bottom: 2.5%;">
     <div class="pbutton"><button class="project-button" onmouseover="" onclick="location.href='https://github.com/braydenyip'"> <img src="GitHub-Mark-64px.png"> Github link</button>
     <div class="project-desc">Takes you to my github page, featuring my projects and some code from select courses.</div></div>
+    <hr style="margin-left: 10%; margin-right: 10%; margin-top: 2.5%; margin-bottom: 2.5%;">
     <h2 id="contact">Contact me!</h2> 
-    <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For co-op or academic inquiries: <a href="mailto:braydenjyip@gmail.com"> yipb@uoguelph.ca</a> </div>
+    <div class="contact-label"> LinkedIn: <a href="https://linkedin.com/in/brayden-yip"> brayden-yip </a> <br> Email: For personal or employment inquiries: <a href="mailto:braydenjyip@gmail.com">braydenjyip@gmail.com</a> <br>For academic inquiries: <a href="mailto:yipb@uoguelph.ca"> yipb@uoguelph.ca</a> </div>
   </body>
 </html>
