--- a/resume.html
+++ b/resume.html
@@ -12,11 +12,12 @@
   <body>
     <div>
       <ul class="navbar"> 
-        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip </a> </li>
+        <li class="navbar-item"> <a class="navbar-link" id="home-return-link" href="./index.html"> > Brayden Yip 👨🏻‍💻</a> </li>
         <li class="navbar-item"> <a class="navbar-link" href="./about.html"> About </a> </li>
-        <li class="navbar-item"> <a class="navbar-link-current" href="./resume.html"> Resume </a></li>
+        <li class="navbar-item"> <a class="navbar-link" href="./resume.html"> Resume </a></li>
       </ul>
     </div>
+    <hr style="margin-left: 10%; margin-right: 10%; margin-top: 2.5%; margin-bottom: 2.5%;">
     <div id="resume-frame">
         <object id="resume-loader" data="src/assets/resume.pdf" type="application/pdf"></object>
     </div>
